Fix for categories wrapping on grid view

--- a/airbitz/airbitz/static/css/global-stylesheet.css
+++ b/airbitz/airbitz/static/css/global-stylesheet.css
@@ -735,13 +735,12 @@
   -o-transition: 0.5s ease;
 }
 .biz-result .biz-categories {
-  height: 25px;
   line-height: 20px;
 }
 .biz-result .biz-description {
   opacity: 0;
   height: 90px;
-  margin: 0 0 4px;
+  margin: 5px 0 4px;
 }
 .biz-result .thumbnail {
   margin-bottom: 40px;
