--- a/airbitz/airbitz/static/less/results-grid.less
+++ b/airbitz/airbitz/static/less/results-grid.less
@@ -41,14 +41,13 @@
     }
 
     .biz-categories {
-        height: 25px;
         line-height: 20px;
     }
 
     .biz-description {
         opacity: 0;
         height: 90px;
-        margin: 0 0 4px;
+        margin: 5px 0 4px;
     }
 }
 
